[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/service",
	"pallets/aura-ext",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo-runtime",
	"polkadot-parachains/shell-runtime",
	"test/runtime",
	"test/runtime-upgrade",
	"test/client",
	"test/service",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	# Totem
	"polkadot-parachains/pallets/totem/bonsai",
	"polkadot-parachains/pallets/totem/common",
]

[profile.release]
panic = "unwind"

[patch.'https://github.com/paritytech/polkadot']
pallet-balances = { path = "./polkadot-parachains/pallets/totem/balances", default-features = false }
