[workspace]
members = [
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"pallets/aura-ext",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/utility",
	"polkadot-parachains/",
	"polkadot-parachains/pallets/parachain-info",
	"polkadot-parachains/pallets/ping",
	"polkadot-parachains/rococo-runtime",
	"polkadot-parachains/shell-runtime",
	"polkadot-parachains/totem-runtime",
	"test/runtime",
	"test/runtime-upgrade",
	"test/client",
	"test/service",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
]

[profile.release]
panic = "unwind"

# [patch.'https://github.com/paritytech/substrate.git']
# pallet-balances = {default-features = false, git = 'https://gitlab.com/totem-tech/totem-mainnet-pallets', branch = 'test-balances-rename'}
