[package]
name = "rococo-collator"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "rococo-collator"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "2.0.0" }
structopt = "0.3.3"
serde = { version = "1.0.101", features = ["derive"] }
hex-literal = "0.2.1"

# Parachain dependencies
parachain-runtime = { package = "cumulus-test-parachain-runtime", path = "runtime" }
rococo-parachain-primitives = { path = "primitives" }

# Substrate dependencies
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false, branch = "master" }
sp-io = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-inherents = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-session = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-cli = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-executor = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-service = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-telemetry = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-transaction-pool = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-transaction-pool = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-network = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-basic-authorship = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-timestamp = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-blockchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-block-builder = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-trie = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-finality-grandpa = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-chain-spec = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-rpc = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-tracing = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-offchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

# Cumulus dependencies
cumulus-client-cli = { path = "../client/cli" }
cumulus-client-consensus-relay-chain = { path = "../client/consensus/relay-chain" }
cumulus-client-collator = { path = "../client/collator" }
cumulus-client-service = { path = "../client/service" }
cumulus-client-network = { path = "../client/network" }
cumulus-primitives-core = { path = "../primitives/core" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }

[build-dependencies]
substrate-build-script-utils = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tempfile = "3.2.0"
tokio = { version = "0.2.13", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# Substrate dependencies
pallet-sudo = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-test-client = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-test-runtime-client = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
