[package]
name = "cumulus-client-network"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Cumulus-specific networking protocol"
edition = "2018"

[dependencies]
# Substrate deps
sp-blockchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-statement-table = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# other deps
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.2"
tracing = "0.1.22"
parking_lot = "0.10.2"
derive_more = "0.99.2"

[dev-dependencies]
tokio = { version = "0.2.21", features = ["macros"] }

# Cumulus deps
cumulus-test-service = { path = "../../test/service" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Polkadot deps
polkadot-test-client = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# substrate deps
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-keyring = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-keystore = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-cli = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-test-utils = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-service = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
