[package]
name = "cumulus-client-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Cumulus dependencies
cumulus-client-consensus-common = { path = "../consensus/common" }
cumulus-client-collator = { path = "../collator" }
cumulus-primitives-core = { path = "../../primitives/core" }

# Substrate dependencies
sc-chain-spec = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-service = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-telemetry = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-tracing = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-blockchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# Other deps
futures = "0.3.6"
tracing = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0" }
