[package]
name = "cumulus-test-client"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-service = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-block-builder = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-test-client = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-keyring = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-test-primitives = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-blockchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-inherents = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-timestamp = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-state-machine = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
frame-system = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
pallet-transaction-payment = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
pallet-balances = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Cumulus deps
cumulus-test-runtime = { path = "../runtime" }
cumulus-test-service = { path = "../service" }
cumulus-test-relay-sproof-builder = { path = "../relay-sproof-builder" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# Other deps
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [ "derive" ] }
