[package]
name = "cumulus-test-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
rand = "0.7.3"
serde = { version = "1.0.101", features = ["derive"] }

# Substrate
sc-basic-authorship = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-block-builder = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-chain-spec = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-executor = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-network = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-rpc = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-service = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-telemetry = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-tracing = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-transaction-pool = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-block-builder = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-inherents = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-keyring = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-offchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false, branch = "master" }
sp-session = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-state-machine = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-timestamp = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-transaction-pool = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-trie = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-test-client = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Polkadot
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# Cumulus
cumulus-client-consensus-relay-chain = { path = "../../client/consensus/relay-chain" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-test-runtime = { path = "../runtime" }

# RPC related dependencies
jsonrpc-core = "15.1.0"

[dev-dependencies]
futures = { version = "0.3.5" }
tokio = { version = "0.2.21", features = ["macros"] }

# Substrate dependencies
substrate-test-utils = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sc-cli = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
