[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
# Substrate deps
sc-client-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-consensus = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-core = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-inherents = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-block-builder = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-blockchain = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-api = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
sp-trie = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }
substrate-prometheus-endpoint = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Polkadot deps
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot", branch = "master" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
tokio = "0.1.22"
codec = { package = "parity-scale-codec", version = "2.0.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Substrate deps
sp-tracing = { git = "https://gitlab.com/totem-tech/totem-lego", branch = "master" }

# Cumulus dependencies
cumulus-test-runtime = { path = "../../../test/runtime" }
cumulus-test-client = { path = "../../../test/client" }

# Other deps
futures-timer = "3.0.2"
