[package]
name = "pallet-balances"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://gitlab.com/totem-tech/totem-lego/"
description = "FRAME pallet to manage balances"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://gitlab.com/totem-tech/totem-lego" }
sp-runtime = { default-features = false, git = "https://gitlab.com/totem-tech/totem-lego" }
frame-benchmarking = { default-features = false, git = "https://gitlab.com/totem-tech/totem-lego", optional = true }
frame-support = { default-features = false, git = "https://gitlab.com/totem-tech/totem-lego" }
frame-system = { default-features = false, git = "https://gitlab.com/totem-tech/totem-lego" }
log = { version = "0.4.14", default-features = false }

totem-common = { path = "../../totem/common", default-features = false }

[dev-dependencies]
#sp-io = { version = "3.0.0", path = "../../primitives/io" }
#sp-core = { version = "3.0.0", path = "../../primitives/core" }
#pallet-transaction-payment = { version = "3.0.0", path = "../transaction-payment" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"totem-common/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
