[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Accounting Engine Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-accounting'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common" }
# primitives
sp-arithmetic = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
sp-io = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
sp-std = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
# frame
frame-support = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
frame-system = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
pallet-randomness = { package = "pallet-randomness-collective-flip", git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
pallet-timestamp = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
pallet-balances = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }

[dev-dependencies]
pallet-accounting = { path = ".", default-features = false, features = ["mock"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-randomness/std",
    "pallet-timestamp/std",
    "pallet-balances/std",
]
mock = ["totem-common/mock"]
