[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Totem archive'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-archive'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common" }
# primitives
sp-std = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
# frame
frame-support = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
frame-system = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }

[dev-dependencies]
#sr-io = { package = "sp-io", git = "https://gitlab.com/totem-tech/totem-lego" }
#sp-primitives = { package = "sp-core", git = "https://gitlab.com/totem-tech/totem-lego" }

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
]