[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'All the common totem stuff'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'totem-common'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
sp-runtime = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
sp-std = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
	"frame-support/std",
	"sp-runtime/std",
    "sp-std/std",
]
mock = []
