[package]
authors = ["Totem Live Accounting <chris.dcosta@totemaccounting.com>"]
description = 'Projects Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-teams'
version = '1.0.0'
# repository = 'https://github.com/substrate-developer-hub/substrate-pallet-template/'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common" }
# primitives
sp-std = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
# frame
frame-support = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }
frame-system = { git = "https://gitlab.com/totem-tech/totem-lego", default-features = false }

[dev-dependencies]
#sr-io = { package = "sp-io", path = "../../primitives/io" }
#sp-primitives = { package = "sp-core", path = "../../primitives/core" }

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
]