[package]
authors = ["Totem Accounting <support@totemaccounting.com>"]
description = 'Accounting Engine Pallet'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-accounting'
version = '1.0.0'
repository = 'https://gitlab.com/totem-tech/totem-lego'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common", default-features = false }
# primitives
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# frame
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-randomness = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
pallet-balances = { path = "../balances", default-features = false }

[dev-dependencies]
#pallet-accounting = { path = ".", default-features = false, features = ["mock"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "totem-common/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
    "pallet-randomness/std",
    "pallet-timestamp/std",
    "sp-io/std",
    "sp-std/std",
    "pallet-balances/std",
]
mock = ["totem-common/mock"]
