[package]
authors = ["Totem Accounting <support@totemaccounting.com>"]
description = 'Decentralised 2FA for Offchain Data Storage'
edition = '2018'
homepage = 'https://totemaccounting.com'
license = 'GNU'
name = 'pallet-bonsai'
version = '1.0.0'
repository = 'https://gitlab.com/totem-tech/totem-lego'

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
totem-common = { path = "../common", default-features = false }
# primitives
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
# frame
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "master" }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
    "totem-common/std",
	"sp-core/std",
	"sp-runtime/std",
    "sp-std/std",
	"frame-support/std",
	"frame-system/std",
]